deployments/dubai-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dubai-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: dubai
  template:
    metadata:
      labels:
        component: dubai
    spec:
      containers:
        - name: dubai
          image: abhi0977/dubai
          ports:
          - containerPort: 5004
