deployments/delhi-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delhi-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: delhi
  ports:
    - port: 5003
      targetPort: 5003
