deployments/dubai-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dubai-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: dubai
  ports:
    - port: 5004
      targetPort: 5004
