deployments/london-cluster-ip-service copy.yaml
apiVersion: v1
kind: Service
metadata:
  name: london-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: london
  ports:
    - port: 5001
      targetPort: 5001
