deployments/paris-cluster-ip-service copy.yaml
apiVersion: v1
kind: Service
metadata:
  name: paris-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: paris
  ports:
    - port: 5002
      targetPort: 5002
