deployments/tokyo-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tokyo-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: tokyo
  ports:
    - port: 5000
      targetPort: 5000
