deployments/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - shreenathdiamond
        - www.shreenathdiamond
      secretName: shreenathdiamond
  rules:
    - host: shreenathdiamond
      http:
        paths:
          - path: /
            backend:
              serviceName: dubai-cluster-ip-service
              servicePort: 5004
    - host: www.shreenathdiamond
      http:
        paths:
          - path: /
            backend:
              serviceName: dubai-cluster-ip-service
              servicePort: 5004
